devolucion de perfil google

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3001
 DB_CNN=mongodb+srv://node_user:8qQNLypZUmEw0rkV@cluster0.q8lzu.mongodb.net/hospitaldb 
 JWT_SECRET=cristhian@123456
+
+GOOGLE_ID=631666904158-chd1jhu72d4s4vb38rcdr7uvosj8uiam.apps.googleusercontent.com
+GOOOGLE_SECRET=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
