--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/boom": "^10.0.1",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "boom": "^7.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
